--- a/paginas/Basquetball.html
+++ b/paginas/Basquetball.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Pagina destinada al informacion del Basquetball, reglas del juego para aprender,  jugadores reconocidos, mejoras para tu cuerpo y accesorios para jugar con un mapa para encontar canchas y zonas de juegos">
     <meta name="keywords" content="Basquetball, deporte, salud, cuidado, bienestar, NBA, argentina, canchas, zonas de juego, Basquet, Baloncesto, ejercicio, Karl Anthony Malone, Charles Wade Barkley, John Houston Stockton, remeras, pantalon, zapatillas, vincha, rodillera, pelota">
 
-    <link rel="icon" href="assets/iconos/logo.png" type="image/x-icon">
+    <link rel="icon" href="../assets/iconos/logo.png" type="image/x-icon">
     <title>Basquets</title>
 </head>
 <body>
@@ -95,43 +95,9 @@
           </div>
       </div>
   </div>
-    <div id="carouselExampleCaptions" class="carousel slide carrusel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="../assets/imagenes/ropabas.png" class="d-block w-100 carrusel-img">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Remera y Pantalones</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../assets/imagenes/zapatilla-basquet.png" class="d-block w-100 carrusel-img">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Zapatillas</h5>
-            </div>
-          </div>
-    <section class="row">
-        <div class="cont1 contBordes col-lg-4">
-            <img src="" class="juador1">
-            <h2></h2>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-    <h1 class="titulo-mapa">Mapa de algunas canchas de basket</h1>
+        <br>
     <div class="mapaB">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d420384.05858289736!2d-58.4161919700843!3d-34.59782771278762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scanchas%20de%20basquet!5e0!3m2!1ses-419!2sar!4v1732482785890!5m2!1ses-419!2sar" width="1000px" height="500px"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d420384.05858289736!2d-58.4161919700843!3d-34.59782771278762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scanchas%20de%20basquet!5e0!3m2!1ses-419!2sar!4v1732482785890!5m2!1ses-419!2sar" width="1600px" height="500px"></iframe>
     </div>
     <footer>
       <div class="container">
@@ -139,32 +105,31 @@
               <h3>Contact Ups</h3>
               <p>Gmail:infotdbas@udsasbfua</p>
               <p>Numero:4124142141244</p>
-              <p>Informacion:El basket es un deporte de equipo, jugado entre dos conjuntos de cinco jugadores cada uno en cuatro períodos de 
-                cuartos de diez minutos cada uno4​ ,doce minutos cada cuarto en la NBA. El objetivo del equipo es anotar puntos introduciendo 
-                un balón por la canasta, un aro a 3,05 metros sobre la superficie de la pista de juego del que cuelga una red.</p>
+              <p>Informacion:</p>
           </div>
           <div class="footer-content">
               <h3>Paginas</h3>
               <ul class="list">
-                  <li><a href="">Futbol</a></li>
-                  <li><a href="">Tenis</a></li>
-                  <li><a href="">Natación</a></li>
-                  <li><a href="">Hockey</a></li>
-                  <li><a href="">Voley</a></li>
-                  <li><a href="">Basquet</a></li>
+                  <li><a href="../paginas/Futbol.html" class="a-footer">Futbol</a></li>
+                  <li><a href="../paginas/Tenis.html" class="a-footer">Tenis</a></li>
+                  <li><a href="../paginas/Natacion.html" class="a-footer">Natación</a></li>
+                  <li><a href="../paginas/Hockey.html" class="a-footer">Hockey</a></li>
+                  <li><a href="../paginas/Volley.html" class="a-footer">Voley</a></li>
+                  <li><a href="../paginas/Basquetball.html" class="a-footer">Basquet</a></li>
               </ul>
           </div>
           <div class="footer-content">
               <ul class="social-icons">
                   <h3>Redes</h3>
-                   <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                   <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                   <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                   <li><a href="" class="a-footer"><i class="fab fa-facebook"><img src="../assets/iconos/facebook logo.png" height="50px"></i></a></li>
+                   <li><a href="" class="a-footer"><i class="fab fa-twitter"><img src="../assets/iconos/twitter logo.png" height="50px"></i></a></li>
+                   <li><a href="" class="a-footer"><i class="fab fa-instagram"><img src="../assets/iconos/instagram logo.png" height="50px"></i></a></li>
+                  <li><a href="" class="a-footer"><i class="fab fa-linkedin"><img src="../assets/iconos/linkedin logo.png" height="50px"></i></a></li>
               </ul>
           </div>
       </div>
       <div class="bottom-bar">
-          <p>&copy; 2023</p>
+          <p>&copy; 2024 Healthy Balance© . todos los derechos reservados</p>
       </div>
   </footer>
 </body>
