--- a/paginas/Hockey.html
+++ b/paginas/Hockey.html
@@ -8,36 +8,36 @@
     <meta name="keywords" content="Hockey, salud, deporte, ejercicio, espn, TycSport, canchas Hockey, escuela hockey, accesorios para hockey, argentina, seleccion de hockey argentina, las leonas">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="icon" href="../assets/iconos/logo.png" type="image/x-icon">
     <title>Deporte - Hockey</title>
 </head>
 <body>
     <header class="row container-fluid" id="header">
-        <div class="logoP col-lg-7">
+        <div class="logoP col-lg-7 col-sm-12">
             <img src="../assets/iconos/logo.png" alt="">
             <h1>Healthy Balance</h1>
         </div>
 
-        <div class="maslogos col-lg-5">
-            <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/registro.png" alt=""><p>Regístrate</p></button>
-            <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/sesion.png" alt=""><p>Inicia Sesión</p></button>            
+        <div class="maslogos col-lg-5 col-sm-12" >
+            <button type="button" class="btn btn-outline-light"><a href="../paginas/registro.html"><img src="../assets/iconos/registro.png" alt=""><p>Regístrate</p></a></button>
+            <button type="button" class="btn btn-outline-light"><a href="../paginas/IniciarSesion.html"><img src="../assets/iconos/sesion.png" alt=""><p>Inicia Sesión</p></a></button>            
             <a href="" data-bs-toggle="dropdown"><img class="menu" src="../assets/iconos/menu.png" alt=""></a>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="">Inicio</a>
-                <a class="dropdown-item" href="">Nutricion</a>
-                <a class="dropdown-item" href="paginas/Futbol.html">Futbol</a>
-                <a class="dropdown-item" href="">Tenis</a>
-                <a class="dropdown-item" href="">Basket</a>
-                <a class="dropdown-item" href="">Voley</a>
-                <a class="dropdown-item" href="">Natacion</a>
-                <a class="dropdown-item" href="">Hockey</a>
+                <a class="dropdown-item" href="../index.html">Inicio</a>
+                <a class="dropdown-item" href="../paginas/Nutricion.html">Nutricion</a>
+                <a class="dropdown-item" href="../paginas/Futbol.html">Futbol</a>
+                <a class="dropdown-item" href="../paginas/Tenis.html">Tenis</a>
+                <a class="dropdown-item" href="../paginas/Basquetball.html">Basket</a>
+                <a class="dropdown-item" href="../paginas/Volley.html">Voley</a>
+                <a class="dropdown-item" href="../paginas/Natacion.html">Natacion</a>
             </div>
         </div>
     </header>
 
     <div class="Ho-cont1">
             <div class="Ho-contHijo1">
-                <h2>¿Qué es el Hockey sobre Hielo?</h2>
-                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem aperiam nam odio repellendus nostrum dolores sed atque dicta maxime tempore et similique non, aliquid repellat totam illo dolor accusantium illum.</p>
+                <h2>¿Qué es el Hockey?</h2>
+                <p> Juego entre dos equipos de número variable de componentes, cuyo objetivo es introducir en la portería contraria una pelota o un disco impulsado por un bastón, y que se practica en campo de hierba o con patines en una pista de hielo u otra superficie dura.</p>
             </div>
 
             <div class="contCardHo">
@@ -47,7 +47,7 @@
                         src="../assets/imagenes/hockey1.jpg"
                         alt=""
                     />
-                    <h1>Hi Mom</h1>
+                    <h1>Beneficios</h1>
                     <p class="texto-explicativo">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad voluptas
                         iste quia reprehenderit nesciunt consectetur earum possimus ea similique!
@@ -57,10 +57,10 @@
                 <div class="cardHo">
                     <div class="containerHo">
                     <img
-                        src="../assets/imagenes/hockey1.jpg"
+                        src="../assets/imagenes/hockeycard2.png"
                         alt=""
                     />
-                    <h1>Hi Mom</h1>
+                    <h1>Beneficios</h1>
                     <p class="texto-explicativo">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad voluptas
                         iste quia reprehenderit nesciunt consectetur earum possimus ea similique!
@@ -70,10 +70,10 @@
                 <div class="cardHo">
                     <div class="containerHo">
                     <img
-                        src="../assets/imagenes/hockey1.jpg"
+                        src="../assets/imagenes/hockey3.jfif"
                         alt=""
                     />
-                    <h1>Hi Mom</h1>
+                    <h1>Beneficios</h1>
                     <p class="texto-explicativo">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad voluptas
                         iste quia reprehenderit nesciunt consectetur earum possimus ea similique!
@@ -86,10 +86,10 @@
                 <div class="cardHo">
                     <div class="containerHo">
                     <img
-                        src="../assets/imagenes/hockey1.jpg"
+                        src="../assets/imagenes/hockey4.jfif"
                         alt=""
                     />
-                    <h1>Hi Mom</h1>
+                    <h1>Beneficios</h1>
                     <p class="texto-explicativo">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad voluptas
                         iste quia reprehenderit nesciunt consectetur earum possimus ea similique!
@@ -99,10 +99,10 @@
                 <div class="cardHo">
                     <div class="containerHo">
                     <img
-                        src="../assets/imagenes/hockey1.jpg"
+                        src="../assets/imagenes/hockey5.jfif"
                         alt=""
                     />
-                    <h1>Hi Mom</h1>
+                    <h1>Beneficios</h1>
                     <p class="texto-explicativo">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad voluptas
                         iste quia reprehenderit nesciunt consectetur earum possimus ea similique!
@@ -112,10 +112,10 @@
                 <div class="cardHo">
                     <div class="containerHo">
                     <img
-                        src="../assets/imagenes/hockey1.jpg"
+                        src="../assets/imagenes/hockey6.jfif"
                         alt=""
                     />
-                    <h1>Hi Mom</h1>
+                    <h1>Beneficios</h1>
                     <p class="texto-explicativo">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad voluptas
                         iste quia reprehenderit nesciunt consectetur earum possimus ea similique!
@@ -137,14 +137,39 @@
 
     </div>
 
-    <!-- IMPORTANTE: TARJETA NUEVA _hockey.scss-->
-
-    <div class="tarjeta">
-        <img src="https://via.placeholder.com/150" alt="Imagen del producto" class="tarjeta-imagen" />
-        <div class="tarjeta-contenido">
-          <h3 class="tarjeta-titulo">Título de la tarjeta</h3>
-          <p class="tarjeta-descripcion">Un ejemplo rápido de texto para completar el contenido de la tarjeta.</p>
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <h3>Contact Ups</h3>
+                <p>Gmail:infotdbas@udsasbfua</p>
+                <p>Numero:4124142141244</p>
+                <p>Informacion:</p>
+            </div>
+            <div class="footer-content">
+                <h3>Paginas</h3>
+                <ul class="list">
+                    <li><a href="paginas/Futbol.html" class="a-footer">Futbol</a></li>
+                    <li><a href="paginas/Tenis.html" class="a-footer">Tenis</a></li>
+                    <li><a href="paginas/Natacion.html" class="a-footer">Natación</a></li>
+                    <li><a href="paginas/Hockey.html" class="a-footer">Hockey</a></li>
+                    <li><a href="paginas/Volley.html" class="a-footer">Voley</a></li>
+                    <li><a href="paginas/Basquetball.html" class="a-footer">Basquet</a></li>
+                </ul>
+            </div>
+            <div class="footer-content">
+                <ul class="social-icons">
+                    <h3>Redes</h3>
+                     <li><a href="" class="a-footer"><i class="fab fa-facebook"></i></a></li>
+                     <li><a href="" class="a-footer"><i class="fab fa-twitter"></i></a></li>
+                     <li><a href="" class="a-footer"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="" class="a-footer"><i class="fab fa-linkedin"></i></a></li>
+                </ul>
+            </div>
         </div>
-      </div>
+        <div class="bottom-bar">
+            <p>&copy; 2024 Healthy Balance© . todos los derechos reservados</p>
+        </div>
+    </footer>
+
 </body>
 </html>
